--- a/BarbeariaAlura/style.css
+++ b/BarbeariaAlura/style.css
@@ -2,8 +2,12 @@ body{
     background: #CCCCCC;
 }
 
+h1{
+    text-align: center;
+}
 p{
     text-align: center;
+    font-size: 20px;
 }
 
 em strong{
