--- a/BarbeariaAlura/style.css
+++ b/BarbeariaAlura/style.css
@@ -1,21 +1,28 @@
-body{
+body {
     background: #CCCCCC;
 }
-#banner{
+
+#banner {
     width: 100%;
 }
 
-h1{
+h1 {
     text-align: center;
 }
-p{
+
+p {
     text-align: center;
-   
+
 }
-#missao{
+
+#missao {
     font-size: 20px;
 }
 
-em strong{
+em strong {
     color: #ff0000;
+}
+
+.itens {
+    font-style: italic;
 }
