--- a/BarbeariaAlura/style.css
+++ b/BarbeariaAlura/style.css
@@ -1,9 +1,9 @@
-body {
-    background: #CCCCCC;
-}
-
 #banner {
     width: 100%;
+}
+
+.principal {
+    background-color: #CCCCCC;
 }
 
 h1 {
@@ -25,4 +25,12 @@ em strong {
 
 .itens {
     font-style: italic;
+}
+
+.beneficios {
+    background-color: #FFFFFF;
+}
+
+h2 {
+    text-align: center;
 }
