--- a/BarbeariaAlura/style.css
+++ b/BarbeariaAlura/style.css
@@ -4,6 +4,7 @@
 
 .principal {
     background-color: #CCCCCC;
+    padding: 30px;
 }
 
 h1 {
@@ -29,8 +30,20 @@ em strong {
 
 .beneficios {
     background-color: #FFFFFF;
+    padding: 20px;
 }
 
 h2 {
     text-align: center;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 25%;
+    margin-right: 10%;
+}
+
+.imagemBeneficios {
+    width: 50%;
 }
