--- a/BarbeariaAlura/style.css
+++ b/BarbeariaAlura/style.css
@@ -1,3 +1,6 @@
+h1{
+    padding-left: 30px;
+}
 #banner {
     width: 100%;
 }
@@ -7,7 +10,7 @@
     padding: 30px;
 }
 
-h1 {
+.titulo-centralizado{
     text-align: center;
 }
 
@@ -33,9 +36,6 @@ em strong {
     padding: 20px;
 }
 
-h2 {
-    text-align: center;
-}
 
 ul {
     display: inline-block;
