--- a/BarbeariaAlura/produtos.css
+++ b/BarbeariaAlura/produtos.css
@@ -1,13 +1,28 @@
-header{
-    background-color:  #BBBBBB;
+header {
+    background-color: #BBBBBB;
+    padding: 20px 0;
 }
-nav li{
+
+.caixa {
+    position: relative;
+    width: 1000px;
+    margin: 0 auto;
+}
+
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0px;
+}
+
+nav li {
     display: inline;
     margin-left: 15px;
 }
-nav a{
+
+nav a {
     text-transform: uppercase;
-    font-size:  22px;
+    font-size: 22px;
     color: #000000;
     text-decoration: none;
 }
